--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,37 @@
   background: linear-gradient(359.26deg, rgba(252, 96, 17, 0.47) -7.18%, rgba(255, 255, 255, 0) 143.19%);
 }
 
-/* .navbar-brand {
-  /* margin: 63px 125px 50px 50px; */
-} */
-
 li {
   margin-left: 60px;
   margin-right: 20px;
 }
+
+.navbar {
+  top: 3vh;
+  opacity: 0.75;
+}
+.nav-link:hover {
+  opacity: 1;
+  color: #FF6838;
+  border-bottom: 3px solid #FF6838;
+}
+.navbar-expand-lg a{
+  font-family: Lobster;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 30px;
+  color: #FF6838;
+}
+.nav-item a{
+  margin-left: 5vw;
+  color: black;
+}
+/* .navbar-toggler{
+  border: black;
+  color: white;
+  background-color: #FF6838;
+} */
 
 .intro-content {
   margin-top: 50px
@@ -18,6 +41,11 @@ li {
 
 .text-content {
   margin-top: 10vh;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
 }
 
 .img-fluid {
@@ -25,4 +53,13 @@ li {
   max-width: 100%;
   height: auto;
   margin-bottom: 90px;
+}
+
+.chooseUs {
+  font-family: Sora;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25.1387px;
+  line-height: 32px;
+  border-radius: 2rem;
 }
