--- a/style/style.css
+++ b/style/style.css
@@ -149,7 +149,8 @@ li {
 }
 
 .card {
-  height: 100%;  
+  height: 100%; 
+  box-shadow: 0 0 10px 0 rgba(100, 100, 100, 0.26); 
 }
 .full-card {
   margin-top: 20px;  
@@ -168,4 +169,28 @@ li {
   font-weight: normal;
   font-size: 15px;
   line-height: 133.19%;
+}
+.peopleBuildingFBC {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 133.19%;
+  
+  color: #000000;
+}
+
+.people-card{
+  width: 17rem;
+  height: 20rem;
+}
+.bottom-content {
+  margin-top: 20px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 197.19%;
+  
+  color: #3C3553;
 }
