--- a/style/style.css
+++ b/style/style.css
@@ -200,3 +200,14 @@ li {
 .founder-full-card{
   margin: auto;
 }
+
+.footer-copyright{
+  background-color: black; 
+  color: #FFFFFF;
+  height: 3.5rem;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 165.19%;
+}
